Added the certificate to support Adafruit IO and code modified to use the AdafruitIO dashboard for test.

--- a/packages.config
+++ b/packages.config
@@ -8,6 +8,7 @@
   <package id="GHIElectronics.TinyCLR.Drivers.Microchip.Winc15x0" version="2.2.0.5000" targetFramework="net48" />
   <package id="GHIElectronics.TinyCLR.Native" version="2.2.0.5000" targetFramework="net48" />
   <package id="GHIElectronics.TinyCLR.Networking" version="2.2.0.5000" targetFramework="net48" />
+  <package id="GHIElectronics.TinyCLR.Networking.Http" version="2.2.0.5000" targetFramework="net48" />
   <package id="GHIElectronics.TinyCLR.Networking.Mqtt" version="2.2.0.5000" targetFramework="net48" />
   <package id="GHIElectronics.TinyCLR.Pins" version="2.2.0.5000" targetFramework="net48" />
 </packages>
