--- a/MqttDemo.csproj
+++ b/MqttDemo.csproj
@@ -41,8 +41,14 @@
     <Compile Include="NetworkWifi.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Certificates\_.adafruit.der" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -67,12 +73,21 @@
     <Reference Include="GHIElectronics.TinyCLR.Networking, Version=2.2.0.5000, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\GHIElectronics.TinyCLR.Networking.2.2.0.5000\lib\net452\GHIElectronics.TinyCLR.Networking.dll</HintPath>
     </Reference>
+    <Reference Include="GHIElectronics.TinyCLR.Networking.Http, Version=2.2.0.5000, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\GHIElectronics.TinyCLR.Networking.Http.2.2.0.5000\lib\net452\GHIElectronics.TinyCLR.Networking.Http.dll</HintPath>
+    </Reference>
     <Reference Include="GHIElectronics.TinyCLR.Networking.Mqtt, Version=2.2.0.5000, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\GHIElectronics.TinyCLR.Networking.Mqtt.2.2.0.5000\lib\net452\GHIElectronics.TinyCLR.Networking.Mqtt.dll</HintPath>
     </Reference>
     <Reference Include="GHIElectronics.TinyCLR.Pins, Version=2.2.0.5000, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\GHIElectronics.TinyCLR.Pins.2.2.0.5000\lib\net452\GHIElectronics.TinyCLR.Pins.dll</HintPath>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
